[package]
name = "listen-in"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpal = "0.15.2"
vosk = "0.2.0"
anyhow = "1.0"
hound = "3.5"
ringbuf = "0.3"
clap = { version = "4.0", features = ["derive"] }
tts = "0.25.5"
cocoa-foundation = "0.1.1"
env_logger = "0.10.0"
objc = "0.2.7"
pocketsphinx = "0.6.0"
weresocool_portaudio = "1.0.47"
wasm-bindgen = { version = "0.2.89", features = [] }
